--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,6 +1,8 @@
 {
     "header": {
-      "button_app" : "App Asset Web"
+      "button_app" : "App Asset Web",
+      "button_contact" : "Contact"
+
     },
 
     "App":{
@@ -18,5 +20,17 @@
     },
     "Footer":{
       "subtittle":"We are seeking funding through the blockchain to provide our investors with returns."
-    }
+    },
+    "Form":{
+      "tittle":"Have any Queries?",
+      "subtitle":"No worries, Send your queries to us.",
+      "button":"Send Message",
+      "label_name":"Your Name",
+      "label_email":"Your Work Email",
+      "label_subject":"Your Subject",
+      "label_message":"Your Message"
+
+
+
+  }
 }
